# langchain_latest_updates

./: main.py  pyproject.toml  requirements.txt
updatedlangchain/: 1-langchainintro.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb
