[project]
name = "langchain-latest-updates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
]
